--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "name": ""
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "watch": "sass --watch ./assets/sass/main.scss:./public/css/style.css"
   },
   "dependencies": {
-    "ejs": "^3.1.8"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20",
+    "sass": "^1.55.0"
   }
 }
