--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "standard": "^17.0.0"
   }
 }
